# espeak-rs

./: .dockerignore  .gitignore  .gitmodules  .npmignore  .npmrc  Cargo.toml  Dockerfile  README.md  docker-compose.yml  espeakng-rs.patch  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: CI.yml  build.yaml  ci.yml  publish.yaml
benches/: espeak_perf.rs  phonetics.rs
libs/bindings/: Cargo.toml
libs/bindings/src/: lib.rs
libs/sys/: build.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: align.rs  frontend.rs  leven.rs  lib.rs  phonetics.rs
src/frontend/: node.rs  py.rs
src/phonetics/: internal.rs  mod.rs  phonetics.rs  punctuation.rs
tests/: common.rs  test.rs
tests/assets/: frankenstein.txt
