[package]
edition = "2021"
name = "espeak-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "espeak_rs"
path = "src/lib.rs"

[dependencies]
# https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.1", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2.12.2"
lazy_static = "1.4.0"
espeakng = { path="espeakng-rs" }
regex = "1"
levenshtein = "1.0.5"
bindgen = "0.64.0"

[build-dependencies]
napi-build = "1.2.1"

[dev-dependencies]
markov = "1.1.0"
pretty_assertions = "1.2.1"
criterion = { version = "0.3.0", features=["async_tokio", "html_reports"] }
tokio = { version = "1", features = ["rt", "macros"]}

[profile.release]
lto = true


[[bench]]
name = "phonetics"
harness = false
