[package]
edition = "2021"
name = "espeak-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "espeak_rs"
path = "src/lib.rs"

[dependencies]
# https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2.2.0"
espeakng = { git = "https://github.com/SpeechifyInc/espeakNG-rs", branch = "fix-compile-macos", features = ["static"] }
regex = "1"
levenshtein = "1.0.5"
once_cell = "1.17.1"

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
markov = "1.1.0"
pretty_assertions = "1.2.1"
criterion = { version = "0.4.0", features = ["async_tokio", "html_reports"] }
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "phonetics"
harness = false
